--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h2 class="section-heading">Portfolio</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="https://givalittle.herokuapp.com/" class="portfolio-box">
                         <img src="img/portfolio/1.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -159,7 +159,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="http://newsli.herokuapp.com/" class="portfolio-box">
                         <img src="img/portfolio/2.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -174,7 +174,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="https://bands-port.herokuapp.com/" class="portfolio-box">
                         <img src="img/portfolio/3.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -189,7 +189,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="#" class="portfolio-box">
                         <img src="img/portfolio/4.png " class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -204,7 +204,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="https://codeunlock.herokuapp.com/" class="portfolio-box">
                         <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -219,9 +219,9 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/6.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -233,7 +233,7 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -257,7 +257,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
-                    <p><a href="img/resume_sahashv3.pdf" download>Web Resume</a></p>
+                    <p><a href="img/Sahash_resume_v1.pdf" download>Web Resume</a></p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
