--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                         <h3>Cool Frameworks</h3>
-                        <p class="text-muted">I work with Node, Angular, Express and Rails Frameworks.</p>
+                        <p class="text-muted">I work with Ruby on Rails, Angular, Express and Node Frameworks.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -221,14 +221,14 @@
                 </div>
                 <div class="col-lg-4 col-sm-6" style="padding: 5px;">
                     <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/6.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/8.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    VagaBond
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    coming soon
                                 </div>
                             </div>
                         </div>
