--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6" style="padding: 5px;">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://instacity.bitballoon.com/" class="portfolio-box">
                         <img src="img/portfolio/4.png " class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -198,7 +198,7 @@
                                     InstaCity
                                 </div>
                                 <div class="project-name">
-                                    Coming Soon 
+                                    InstaCity is a web application which gives you a weather forecast where users can enter in a city name, and the app will pull a four-day forecast for the weather today and the next three days. It will also gives you instagram posts people shared on that city.
                                 </div>
                             </div>
                         </div>
