--- a/index.html
+++ b/index.html
@@ -107,28 +107,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                        <i class="fa fa-5x fa-diamond wow bounceIn text-primary"></i>
                         <h3>Cool Frameworks</h3>
                         <p class="text-muted">I work with Ruby on Rails, Angular, Express and Node Frameworks.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-5x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Aim Higher</h3>
                         <p class="text-muted">To aim higher, i use Git/Github for version control and deploy with Heroku. I can persist with Mongo, PostgreSQL and MySQL Databases.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-5x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Up to Date</h3>
                         <p class="text-muted">I keep myself up to date with the cutting edge languages such as HTML5, CSS3, Javascript, and Ruby.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-5x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Love to Design</h3>
                         <p class="text-muted">I love designing and to give special touches, i use Adobe Creative Suite, SASS and SKETCH.</p>
                     </div>
@@ -139,7 +139,7 @@
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter">
+            <div class="row-fluid">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
                     <hr class="primary">
@@ -180,7 +180,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Bands-port
+                                    Bands-Port
                                 </div>
                                 <div class="project-name">
                                     This is an app where you can find local bands and talents by the location(zipcode). This app will also allow you to add bands and have information about the bands to promote the band.
@@ -225,10 +225,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    VagaBond
+                                    VAGABONG "coming soon!"
                                 </div>
                                 <div class="project-name">
-                                    coming soon
+                                    Travel app where you can choose the city from the map and read and post interesting things about the city.
                                 </div>
                             </div>
                         </div>
@@ -249,39 +249,41 @@
 
     <section id="contact">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row" id="contact"> -->
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <p>Feel free to contact me through any of the following:</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
                     <p><a href="img/Sahash_resume_v1.pdf" download>Web Resume</a></p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
                     <p>510-734-3349</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:sahash182@gmail.com">sahash182@gmail.com</a></p>
                 </div>
+            <!-- </div> -->
+            <div class="row">  
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/sahash182" target="_blank" style="margin-right: 5px;">
-                        <i class="fa fa-github-square fa-3x wow bounceIn" style="visibility: visible; animation-name: bounceIn;"></i>
+                    <a class="github" href="https://github.com/sahash182" target="_blank" style="margin-right: 5px;">
+                        <i class="fa fa-github-square fa-3x wow bounceIn"  style="visibility: visible; animation-nabounceIn;"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/sahash182" target="_blank" style="margin-right: 5px;">
-                        <i class="fa fa-linkedin-square fa-3x wow bounceIn" style="visibility: visible; animation-name: bounceIn;"></i>
+                    <a class="linkedin" href="https://www.linkedin.com/in/sahash182" target="_blank" style="margin-right: 5px;">
+                        <i class="fa fa-linkedin-square fa-3x wow bounceIn"  style="visibility: visibleanimation-name: bounceIn;"></i>
                     </a>
-                    <a href="https://twitter.com/sahash4" target="_blank" style="margin-right: 5px;">
-                        <i class="fa fa-twitter-square fa-3x wow bounceIn" style="visibility: visible; animation-name: bounceIn;"></i>
+                    <a class="twitter" href="https://twitter.com/sahash4" target="_blank" style="margin-right: 5px;">
+                        <i class="fa fa-twitter-square fa-3x wow bounceIn"  style="visibility: visible; animation-name: bounceIn;"></i>
                     </a>
-                    <a href="https://www.facebook.com/sahash182" target="_blank" style="margin-right: 5px;">
-                        <i class="fa fa-facebook fa-3x wow bounceIn" style="visibility: visible; animation-name: bounceIn;"></i>
+                    <a class="facebook" href="https://www.facebook.com/sahash182" target="_blank" style="margin-right: 5px;">
+                        <i class="fa fa-facebook fa-3x wow bounceIn"  style="visibility: visible; animation-name: bounceIn;"></i>
                     </a>
-                    <a href="https://instagram.com/sahash182" target="_blank" style="margin-right: 5px;">
-                        <i class="fa fa-instagram fa-3x wow bounceIn" style="visibility: visible; animation-name: bounceIn;"></i>
+                    <a class="instagram" href="https://instagram.com/sahash182" target="_blank" style="margin-right: 5px;">
+                        <i class="fa fa-instagram fa-3x wow bounceIn"  style="visibility: visible; animation-name: bounceIn;"></i>
                     </a>
                 </div>
             </div>
